Add admin support and public view for blog posts
- Registered Post model in admin site
- Created superuser to manage posts
- Implemented PostListView to display published posts
- Added post_list.html template to render blog posts
- Configured URLs to display blog post list at root path

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,13 @@ __pycache__/
 *.pyc
 db.sqlite3
 *.sqlite3
+# Ignore SSL certificate and key files
+cert.pem
+key.pem
+cert.crt
+
+# Or ignore all PEM/key files anywhere
+*.pem
+*.key
+
 
